loopfor.LoopCourseForest.scala.error
Erreur de compilation :
LoopCourseForest:25: error: not found: value avances
      avances
      ^